--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "node ./bin/www",
+    "start:dev": "nodemon ./bin/www",
     "test": "mocha --recursive --timeout 60000 --exit"
   },
   "dependencies": {
