--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ before_install:
   - npm install
   - export NODE_ENV=production
 script:
-  - node test
+  - mocha --recursive --timeout 60000 --exit
