--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "jade": "^0.29.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
-    "morgan": "~1.9.1"
-  },
-  "devDependencies": {
+    "morgan": "~1.9.1",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "debug": "^4.3.3",
