--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
   - 10
+  - 9
+  - 8
 before_install:
   - npm install
   - export NODE_ENV=production
+script:
+  - mocha --recursive --timeout 60000 --exit
